--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
+    "axios": "^1.11.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "modern-normalize": "^3.0.1",
