--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "modern-normalize": "^3.0.1",
