--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "mobx": "^6.13.7",
