--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-number-format": "^5.4.4",
     "react-router": "^7.8.0",
     "react-toastify": "^11.0.5",
     "yup": "^1.7.0"
