--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-number-format": "^5.4.4",
     "react-router": "^7.8.0",
     "react-toastify": "^11.0.5",
+    "use-debounce": "^10.0.6",
     "yup": "^1.7.0"
   },
   "devDependencies": {
