--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^7.8.0",
     "react-toastify": "^11.0.5",
     "use-debounce": "^10.0.6",
+    "uuid": "^13.0.0",
     "yup": "^1.7.0"
   },
   "devDependencies": {
