--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.62.0",
     "react-number-format": "^5.4.4",
     "react-router": "^7.8.0",
+    "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "use-debounce": "^10.0.6",
     "uuid": "^13.0.0",
